--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-  "name": "blog",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js", 
-  "scripts": {
-    "start": "nodemon --inspect src/index.js",
-    "watch": "sass --embed-source-map --watch src/resources/scss/app.scss src/public/css/app.css",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/HuynhNgocXuan/nodejs_blog.git"
-  },
-  "keywords": [
-    "f8",
-    "blog",
-    "nodejs"
-  ],
-  "author": "huynhnx",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/HuynhNgocXuan/nodejs_blog/issues"
-  },
-  "homepage": "https://github.com/HuynhNgocXuan/nodejs_blog#readme",
-  "dependencies": {
-    "express": "^4.18.3",
-    "express-handlebars": "^7.1.2"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.0",
-    "sass": "^1.71.1"
-  }
+    "name": "blog",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "nodemon --inspect src/index.js",
+        "watch": "sass --embed-source-map --watch src/resources/scss/app.scss src/public/css/app.css",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/HuynhNgocXuan/nodejs_blog.git"
+    },
+    "keywords": [
+        "f8",
+        "blog",
+        "nodejs"
+    ],
+    "author": "huynhnx",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/HuynhNgocXuan/nodejs_blog/issues"
+    },
+    "homepage": "https://github.com/HuynhNgocXuan/nodejs_blog#readme",
+    "dependencies": {
+        "express": "^4.18.3",
+        "express-handlebars": "^7.1.2",
+        "mongoose": "^8.2.1",
+        "mongoose-slug-updater": "^3.3.0"
+    },
+    "devDependencies": {
+        "morgan": "^1.10.0",
+        "nodemon": "^3.1.0",
+        "sass": "^1.71.1"
+    }
 }
